# jpeg-compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
analysis/: analyze_jpeg.py
include/: color_spaces.h  dct.h  grayscale.h  jfif_handler.h  jpeg_quantization_table.h
natural_c/: CMakeLists.txt
natural_c/include/: bmp_handler.h  grayscale.h  jfif_handler.h
natural_c/src/: bmp_handler.c  grayscale.c  huffman_tables.c  jfif_handler.c  main.c  quantization_table.c
src/: bmp_handler.c  color_spaces.c  dct.c  grayscale.c  huffman_tables.c  jfif_handler.c  main.c  quantization_table.c
ti/: CMakeLists.txt  flash_binaries.sh  jpeg_compression_ti_psdk.patch  setup_psdk.sh
ti/client/: concerto.mak  main.c
ti/client/include/: color_spaces.h  jfif_handler.h
ti/client/src/: color_spaces.c  concerto.mak  jfif_handler.c  main.c
ti/include/: jpeg_compression.h
ti/service/include/: jpeg_compression.h
ti/service/src/: concerto.mak  dct.c  dct_matrix.c  dct_se.cpp  encoding.c  fetch_block.cpp  huffman_tables.c  jpeg_compression.c  quantization.c  quantization_table.c  quantization_table_reciprocal.c  zigzag.c
ti/service/utils/: dct_matrix_generator.py  quantization_table_generator.py
ti/src/: concerto.mak
